--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,9 @@
         <nav>
           <li class="fork">
               <a href="{{ site.github.repository_url }}">View On GitHub</a>
+              <a href="{{ sit.url }}/home">Home</a>
               <a href="{{ site.url }}/about">About Me</a>
+              <a href="{{ site.url }}/projects">Projects</a>
             </li>
           {% if site.show_downloads %}
             <li class="downloads"><a href="{{ site.github.zip_url }}">ZIP</a></li>
@@ -37,7 +39,6 @@
       <section>
         <div id="title">
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
-          <p>{{ site.description | default: site.github.project_tagline }}</p>
           <hr>
         </div>
 
