--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,9 @@
         <nav>
           <li class="fork">
               <a href="{{ site.github.repository_url }}">View On GitHub</a>
-              <a href="{{ sit.url }}/home">Home</a>
-              <a href="{{ site.url }}/about">About Me</a>
-              <a href="{{ site.url }}/projects">Projects</a>
+              <a href="{{ sit.baseurl }}/home">Home</a>
+              <a href="{{ site.baseurl }}/about">About Me</a>
+              <a href="{{ site.baseurl }}/projects">Projects</a>
             </li>
           {% if site.show_downloads %}
             <li class="downloads"><a href="{{ site.github.zip_url }}">ZIP</a></li>
